--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -149,16 +149,21 @@ deploy_app_production:
   
           echo "=== Parando contenedores existentes ==="
           docker-compose -f docker-compose-production.deploy.yml down --remove-orphans || true
-          docker rmi "$CI_REGISTRY_IMAGE:${DEPLOY_TAG}"
+          
           echo "=== Iniciando despliegue para $CI_COMMIT_TAG ===" 
           DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
           IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
-        
+          
+          docker rmi "$CI_REGISTRY_IMAGE:${DEPLOY_TAG}"
+      
+          echo "=== Iniciando despliegue para $CI_COMMIT_TAG ==="
+          echo "Tag limpio: $DEPLOY_TAG"
+      
           echo "=== Descargando imagen $IMAGE_NAME ==="
           docker pull "$IMAGE_NAME"
         
           echo "=== Iniciando nuevos contenedores ==="
-          DEPLOY_TAG="$DEPLOY_TAG" docker-compose -f docker-compose-production.deploy.yml up -d
+          CI_REGISTRY_IMAGE="$CI_REGISTRY_IMAGE" DEPLOY_TAG="$DEPLOY_TAG" docker-compose -f docker-compose-production.deploy.yml up -d
         
           echo "=== Verificando estado de contenedores ==="
           docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
