--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -151,7 +151,7 @@ deploy_app_production:
           docker-compose -f docker-compose-production.deploy.yml down --remove-orphans || true
           
           echo "=== Iniciando despliegue para $CI_COMMIT_TAG ===" 
-          DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
+          export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
           IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
           
           docker rmi "$CI_REGISTRY_IMAGE:${DEPLOY_TAG}"
@@ -163,7 +163,7 @@ deploy_app_production:
           docker pull "$IMAGE_NAME"
         
           echo "=== Iniciando nuevos contenedores ==="
-          CI_REGISTRY_IMAGE="$CI_REGISTRY_IMAGE" DEPLOY_TAG="$DEPLOY_TAG" docker-compose -f docker-compose-production.deploy.yml up -d
+          docker-compose -f docker-compose-production.deploy.yml up -d
         
           echo "=== Verificando estado de contenedores ==="
           docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
