--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,33 +93,70 @@ build_image:
 deploy_app_staging:
   stage: deploy_staging
   tags:
-    - deploy
-  services: []
+    - azure
+  services: [ ]
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-staging"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
+    - echo "=== Autenticando con GitLab Registry ==="
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
     - |
-      if [ -n "$CI_COMMIT_TAG" ]; then
+      if [[ "$CI_COMMIT_TAG" =~ ^deploy-production-v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
         git fetch origin main
-        if git branch -r --contains "$CI_COMMIT_TAG" | grep -q "origin/main"; then
+        if git branch -r --contains "$CI_COMMIT_SHA" | grep -q "origin/main"; then
+          echo "=== Preparando despliegue ==="
+          # Crear directorio de trabajo si no existe
+          mkdir -p ~/spvending/api-staging
+          cd ~/spvending/api-staging
+
+          echo "=== Copiar docker-compose desde el repositorio ==="
+          cp $CI_PROJECT_DIR/docker-compose-staging.deploy.yml ./
+
+          echo "=== Parando contenedores existentes ==="
+          docker-compose -f docker-compose-staging.deploy.yml down --remove-orphans || true
+
+          echo "=== Iniciando despliegue para $CI_COMMIT_TAG ===" 
           export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-staging-}"
-          echo "=== DESPLEGANDO VERSIÓN ==="
-          docker pull "$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
-          docker-compose -f docker-compose-staging.deploy.yml down --remove-orphans
-          docker-compose -f docker-compose-staging.deploy.yml up -d 
-          echo "=== CONTENEDORES EN EJECUCIÓN ==="
+          IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
+
+          docker rmi "$IMAGE_NAME" || true
+
+          echo "=== Iniciando despliegue para $CI_COMMIT_TAG ==="
+          echo "Tag limpio: $DEPLOY_TAG"
+
+          echo "=== Descargando imagen $IMAGE_NAME ==="
+          docker pull "$IMAGE_NAME"
+
+          echo "=== Iniciando nuevos contenedores ==="
+          docker-compose -f docker-compose-staging.deploy.yml up -d
+
+          echo "=== Verificando estado de contenedores ==="
           docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+
+          echo "=== Limpiando imágenes no utilizadas ==="
+          docker image prune -af
+          echo "=== Despliegue completado exitosamente ==="
+          exit 0
         else
-          echo "El tag NO proviene de main. Saltando build."
+          echo "El tag NO proviene de main. Saltando despliegue."
+          exit 0
         fi
       else
-        echo "No es un tag. Saltando build."
+        echo "No es un tag de despliegue válido. Saltando..."
+        echo "Tag recibido: $CI_COMMIT_TAG"
+        echo "Formato esperado: deploy-production-v[X.Y.Z]"
+        exit 0
       fi
   after_script:
     - docker logout $CI_REGISTRY
+    - |
+      if [ "$CI_JOB_STATUS" != "success" ]; then
+        echo "=== Logs de contenedores para debug ==="
+        docker-compose -f ~/deployment/docker-compose-staging.deploy.yml logs --tail=50 || true
+      fi
+
   rules:
     - if: $CI_COMMIT_TAG=~ /^deploy-staging-v\d+\.\d+\.\d+$/
 
